--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,12 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "a2a-sdk[http-server]>=0.3.22",
+    "dotenv>=0.9.9",
     "langchain>=1.2.7",
     "langchain-core>=1.2.7",
     "langchain-google-genai>=4.2.0",
     "langchain-ollama>=1.0.1",
+    "langchain-openai>=1.1.7",
     "langgraph>=1.0.7",
     "uvicorn>=0.40.0",
 ]
